fix overflow

--- a/src/styles/_notifications.scss
+++ b/src/styles/_notifications.scss
@@ -9,8 +9,7 @@
     }
     .s-notifications-list {
         display: flex;
-        flex-direction: column-reverse;
-        justify-content: flex-end;
+        flex-direction: column;
         overflow-y: auto;
         li {
             white-space-collapse: break-spaces;
